# some-rust

./: .gitignore  simplest-exec-shell.rs
exec-shell/: Cargo.toml  README.md  trie.ex
exec-shell/src/: complete.rs  lib.rs  main.rs  repl.rs
pico-demo/: Cargo.toml  README.md
pico-demo/src/: main.rs
